# dlight-client

./: .coverage  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  claude_skills_gemini.py  coverage.xml  flashy.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/commands/: commit.md  issue.md  release.md  review-pr.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml  python-package.yml  python-publish.yml  release.yml
ARCHITECTURE/: index.html
api/: index.html
api/client/: index.html
api/device/: index.html
api/discovery/: index.html
api/exceptions/: index.html
api/models/: index.html
architecture/: index.html
changelog/: index.html
contributing/: index.html
dlightclient/: __init__.py  _frame.py  _pool.py  cli.py  client.py  constants.py  device.py  discovery.py  dlight.py  exceptions.py  models.py
docs/: ARCHITECTURE.md  architecture.md  changelog.md  contributing.md  getting-started.md  index.md  requirements.txt  roadmap.md
docs/api/: client.md  device.md  discovery.md  exceptions.md  index.md  models.md
docs/user-guide/: cli.md  connections.md  device-control.md  discovery.md  error-handling.md
getting-started/: index.html
issues/: DL-001_persistent_connections.md  DL-002_granular_cli.md  DL-003_retry_logic.md  DL-004_mdns_discovery.md  DL-005_state_caching.md
roadmap/: index.html
search/: search_index.json
stylesheets/: brand.css
tests/: conftest.py  fake_server.py  test_cli.py  test_device.py  test_dlight.py  test_exceptions.py  test_frame.py  test_pool_regressions.py  test_retry.py  test_security_fix_verification.py
tools/: fake_dlight_server.py
user-guide/cli/: index.html
user-guide/connections/: index.html
user-guide/device-control/: index.html
user-guide/discovery/: index.html
user-guide/error-handling/: index.html
