# pyproject.toml

[build-system]
# Specifies that setuptools is needed to build the package
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# Core metadata about your project
name = "dlight-client" # Distribution name (for pip install)
dynamic = ["version"] # Version is sourced from dlightclient.__version__
authors = [
  { name="David Kernan", email="dave@paddez.com" },
]
description = "A Python client for the dLight smart lamp API."
readme = "README.md" # Path to your README file
license = "MIT"
requires-python = ">=3.9" # Minimum Python version supported
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
]
keywords = ["dlight", "smart home", "lighting", "api", "iot"]

[tool.setuptools.dynamic]
version = {attr = "dlightclient.__version__"}

[tool.setuptools.packages.find]
include = ["dlightclient*"]
exclude = ["tests*", "issues*", "docs*"]

[project.urls]
"Homepage" = "https://github.com/irishsmurf/dlight-client" # Example URL
"Bug Tracker" = "https://github.com/irishsmurf/dlight-client/issues" # Example URL
