[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dlight-client"
dynamic = ["version"]
authors = [
  { name="David Kernan", email="dave@paddez.com" },
]
description = "Async Python library for discovering and controlling dLight smart lamps over local Wi-Fi."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["dlight", "smart home", "lighting", "asyncio", "iot", "local-api"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.5",
    "coverage>=7.0",
    "mypy",
]
docs = [
    "mkdocs-material>=9.5,<10",
    "pymdown-extensions>=10.7",
]

[project.scripts]
dlight = "dlightclient.cli:main_sync"

[project.urls]
"Homepage"      = "https://github.com/irishsmurf/dlight-client"
"Documentation" = "https://irishsmurf.github.io/dlight-client/"
"Changelog"     = "https://github.com/irishsmurf/dlight-client/blob/main/CHANGELOG.md"
"Bug Tracker"   = "https://github.com/irishsmurf/dlight-client/issues"

[tool.setuptools.dynamic]
version = {attr = "dlightclient.__version__"}

[tool.setuptools.packages.find]
include = ["dlightclient*"]
exclude = ["tests*", "issues*", "docs*"]

[tool.setuptools.package-data]
dlightclient = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["dlightclient"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
